feat: Actions for rest

--- a/src/locales/conditions.en-US.json
+++ b/src/locales/conditions.en-US.json
@@ -4,6 +4,10 @@
   "Hungry": "Hungry",
   "Injured": "Injured",
   "Mad": "Mad",
+  "CONDITION-CLEAR-SR": "After short rest",
+  "CONDITION-CLEAR-LR": "After long rest",
+  "CONDITION-CLEAR-FR": "After full rest",
+  "CONDITION-CLEAR-ME": "After meal",
   "After short rest": "After short rest",
   "After long rest": "After long rest",
   "After full rest": "After full rest",
