--- a/src/locales/conditions.fr-FR.json
+++ b/src/locales/conditions.fr-FR.json
@@ -4,6 +4,10 @@
   "Hungry": "Faim",
   "Injured": "Blessure",
   "Mad": "Folie",
+  "CONDITION-CLEAR-SR": "Après un repos court",
+  "CONDITION-CLEAR-LR": "Après un repos long",
+  "CONDITION-CLEAR-FR": "Après un repos complet",
+  "CONDITION-CLEAR-ME": "Après un repas",
   "After short rest": "Après un repos court",
   "After long rest": "Après un repos long",
   "After full rest": "Après un repos complet",
