--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -38,6 +38,7 @@
   "Bank": "Bank",
   "Pips": "Pips",
   "Roll:": "Roll:",
+  "Roll: ": "Roll: ",
   "About": "About",
   "This application is an independent production by Daniel Coquette and is not affiliated with Losing Games. It is published under the Mausritter Third Party Licence.": "This application is an independent production by Daniel Coquette and is not affiliated with Losing Games. It is published under the Mausritter Third Party Licence.",
   "Mausritter is copyright Losing Games.": "Mausritter is copyright Losing Games.",
@@ -117,7 +118,26 @@
   "Clear": "Clear",
   "Export": "Export",
   "“{name}” is now copied to clipboard.": "“{name}” is now copied to clipboard.",
-  "Import": "Import",
+  "Import...": "Import...",
   "Paste your character here...": "Paste your character here...",
-  "Drop item here, in your bank.": "Drop item here, in your bank."
+  "Drop item here, in your bank.": "Drop item here, in your bank.",
+  "Advancement...": "Advancement...",
+  "“{name}” prepares advancement...": "“{name}” prepares advancement...",
+  "Short rest...": "Short rest...",
+  "Short rest": "Short rest",
+  "Long rest...": "Long rest...",
+  "Long rest": "Long rest",
+  "Full rest...": "Full rest...",
+  "Full rest": "Full rest",
+  "A short rest lasts 1 turn and restore d6+1 HP. Do you confirm?": "A short rest lasts 1 turn and restore d6+1 HP. Do you confirm?",
+  "A full rest is a week back in safety. It will cost you around 20 pips. Do you confirm?": "A full rest is a week back in safety. It will cost you around 20 pips. Do you confirm?",
+  "Current HP is {value}.": "Current HP is {value}.",
+  "You need to eat and sleep for a watch to do a long rest. All HP restored. Restore d6 to each attributes if HP was at max. Do you confirm?": "You need to eat and sleep for a watch to do a long rest. All HP restored. Restore d6 to each attributes if HP was at max. Do you confirm?",
+  "Restored all HP.": "Restored all HP.",
+  "Restored all atributes.": "Restored all atributes.",
+  "Restored some atributes.": "Restored some atributes.",
+  "Current STR is {value}.": "Current STR is {value}.",
+  "Current DEX is {value}.": "Current DEX is {value}.",
+  "Current WIL is {value}.": "Current WIL is {value}.",
+  "Do not forget to remove the conditions corresponding to this rest.": "Do not forget to remove the conditions corresponding to this rest."
 }
