--- a/src/locales/fr-FR.json
+++ b/src/locales/fr-FR.json
@@ -34,10 +34,11 @@
   "Level": "Niveau",
   "XP": "PX",
   "Grit": "Cran",
-  "Ignore a number of conditions equal to your Grit.": "Ignorer autant de conditions que votre score de Cran.",
+  "Ignore a number of conditions equal to your Grit.": "Ignorer autant de conditions que ton score de Cran.",
   "Bank": "Banque",
   "Pips": "Pépins",
   "Roll:": "Tirage :",
+  "Roll: ": "Tirage : ",
   "About": "À Propos",
   "This application is an independent production by Daniel Coquette and is not affiliated with Losing Games. It is published under the Mausritter Third Party Licence.": "Cette application est une production indépendante écrite par Daniel Coquette et n'est pas affiliée avec « Losing Games ». Elle est publiée sous la license « Mausritter Third Party Licence ».",
   "Mausritter is copyright Losing Games.": "Mausritter est copyright Losing Games.",
@@ -86,7 +87,7 @@
   "Spell": "Sort",
   "Item": "Objet",
   "A custom item.": "Un objet personnalisé.",
-  "The sheet of “{name}” will be erased. Do you confirm?": "Confirmez-vous l'effacement de la fiche de « {name} » ?",
+  "The sheet of “{name}” will be erased. Do you confirm?": "Confirmes-tu l'effacement de la fiche de « {name} » ?",
   "Confirm": "Confirmation",
   "Yes": "Oui",
   "No": "Non",
@@ -95,29 +96,48 @@
   "Items and conditions drawer.": "Tiroir à objets et conditions",
   "Roll {dice}": "Lancer {dice}",
   "“{name}” prepares for adventure...": "« {name} » se prépare pour l'aventure…",
-  "You may swap any two attributes.": "Vous pouvez intervertir deux des attributs.",
+  "You may swap any two attributes.": "Tu peux intervertir deux des attributs.",
   "You may choose a weapon below:": "Choisissez une arme ci-dessous :",
-  "You can take one item below:": "Vous pouvez prendre un des objet ci-dessous :",
-  "Item from inherited your background of “{background}”": "Objets hérités de votre passé de « {background} »",
+  "You can take one item below:": "Tu peux prendre un des objet ci-dessous :",
+  "Item from inherited your background of “{background}”": "Objets hérités de ton passé de « {background} »",
   "Your mouse must pay a fee of 1% of the value when retrieving the stored pips or items.": "À chaque retrait, ta souris doit payer des frais à hauteur de 1 % de la valeur des pépins ou objets retirés.",
-  "Retrieving “{name}” from your bank will cost you {fee} pips. Confirm?": "Retirer « {name} » de votre banque vous coutera {fee} pépins. Confirmez-vous votre retrait ?",
-  "You do need to have {fee} pips to retrieve “{name}”!": "Vous avez besoin de {fee} pépins pour retirer « {name} » !",
+  "Retrieving “{name}” from your bank will cost you {fee} pips. Confirm?": "Retirer « {name} » de ta banque te coutera {fee} pépins. Confirmes-tu le retrait ?",
+  "You do need to have {fee} pips to retrieve “{name}”!": "Tu as besoin de {fee} pépins pour retirer « {name} » !",
   "One paw": "Une patte",
   "Both paws": "Deux pattes",
   "History": "Historique",
-  "Manage your characters.": "Gérer vos personnages.",
-  "The sheet of “{dest}” will be overwritten by “{name}”. Do you confirm?": "Confirmez-vous le remplacement de la fiche de « {dest} » par celle de « {name} » ?",
-  "The current sheet will be overwritten by “{name}”. Do you confirm?": "Confirmez-vous le remplacement de la fiche en cours par “{name}” ?",
+  "Manage your characters.": "Gérer tes personnages.",
+  "The sheet of “{dest}” will be overwritten by “{name}”. Do you confirm?": "Confirmes-tu le remplacement de la fiche de « {dest} » par celle de « {name} » ?",
+  "The current sheet will be overwritten by “{name}”. Do you confirm?": "Confirmes-tu le remplacement de la fiche en cours par “{name}” ?",
   "Welcome": "Bienvenue",
   "Hirelings": "Employés",
   "Recruit hireling...": "Engager un employé…",
   "Wages/day": "Salaire / jour",
   "Dismiss": "Renvoyer",
-  "The hireling of “{desc} {name}” will be dismissed. Do you confirm?": "Confirmez le renvoi du « {desc} {name} » ?",
+  "The hireling of “{desc} {name}” will be dismissed. Do you confirm?": "Confirmes le renvoi du « {desc} {name} » ?",
   "Clear": "Effacer",
   "Export": "Exporter",
   "“{name}” is now copied to clipboard.": "« {name} » a été copié dans le presse-papier.",
-  "Import": "Importer",
+  "Import...": "Importer…",
   "Paste your character here...": "Coller le personnage ici…",
-  "Drop item here, in your bank.": "Déposer ici les objets à mettre en banque."
+  "Drop item here, in your bank.": "Déposer ici les objets à mettre en banque.",
+  "Advancement...": "Monter de niveau…",
+  "“{name}” prepares advancement...": "« {name} » se prépare à monter de niveau…",
+  "Short rest...": "Repos court…",
+  "Short rest": "Repos court",
+  "Long rest...": "Repos long…",
+  "Long rest": "Repos long",
+  "Full rest...": "Repos complet…",
+  "Full rest": "Repos complet",
+  "A short rest lasts 1 turn and restore d6+1 HP. Do you confirm?": "Un repos court dure 1 tour et restaure d6+1 PV. Confirmes-tu ?",
+  "A full rest is a week back in safety. It will cost you around 20 pips. Do you confirm?": "Le repos complet nécessite d'être une semaine dans un lieu sûr. Cela coûte 20 pépins. Confirmes-tu ?",
+  "Current HP is {value}.": "PV courant : {value}.",
+  "You need to eat and sleep for a watch to do a long rest. All HP restored. Restore d6 to each attributes if HP was at max. Do you confirm?": "Tu dois manger et dormir pendant une garde. Restaure tous les PV. Si tes PV sont au maximum, restaure aussi d6 à chaque attribut. Confirmes-tu?",
+  "Restored all HP.": "Tous tes PV ont été restaurés.",
+  "Restored all attributes.": "Tous tes attributs ont été restaurés.",
+  "Restored some attributes.": "Tes Attributs ont été restaurés.",
+  "Current STR is {value}.": "FOR en cours : {value}.",
+  "Current DEX is {value}.": "DEX en cours : {value}.",
+  "Current WIL is {value}.": "VOL en cours : {value}.",
+  "Do not forget to remove the conditions corresponding to this rest.": "N'oublies pas de retirer les conditions correspondant à ce repos."
 }
