--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -49,6 +49,7 @@
   "With advantage": "With advantage",
   "With disadvantage": "With disadvantage",
   "Need {score} or lower, roll {roll}.": "Need {score} or lower, roll {roll}.",
+  "Need upper than {upper}, roll {roll}.": "Need upper than {upper}, roll {roll}.",
   "Create a new character...": "Create a new character...",
   "Load": "Load",
   "Save": "Save",
@@ -108,7 +109,7 @@
   "History": "History",
   "Manage your characters.": "Manage your characters.",
   "The sheet of “{dest}” will be overwritten by “{name}”. Do you confirm?": "The sheet of “{dest}” will be overwritten by “{name}”. Do you confirm?",
-  "The current sheet will be overwritten by “{name}”. Do you confirm?": "The current sheet will be overwritten by “{name}”. Do you confirm?",
+  "Do you want to save the sheet of “{name}”?": "Do you want to save the sheet of “{name}”?",
   "Welcome": "Welcome",
   "Hirelings": "Hirelings",
   "Recruit hireling...": "Recruit hireling...",
@@ -122,7 +123,9 @@
   "Paste your character here...": "Paste your character here...",
   "Drop item here, in your bank.": "Drop item here, in your bank.",
   "Advancement...": "Advancement...",
+  "Level up": "Level up",
   "“{name}” prepares advancement...": "“{name}” prepares advancement...",
+  "“{name}” will move from the {current} level to the {next} level.": "“{name}” will move from the {current} level to the {next} level.",
   "Short rest...": "Short rest...",
   "Short rest": "Short rest",
   "Long rest...": "Long rest...",
@@ -139,5 +142,10 @@
   "Current STR is {value}.": "Current STR is {value}.",
   "Current DEX is {value}.": "Current DEX is {value}.",
   "Current WIL is {value}.": "Current WIL is {value}.",
-  "Do not forget to remove the conditions corresponding to this rest.": "Do not forget to remove the conditions corresponding to this rest."
+  "Do not forget to remove the conditions corresponding to this rest.": "Do not forget to remove the conditions corresponding to this rest.",
+  "Increase in attributes if d20 is higher than the maximum of the latter.": "Increase in attributes if d20 is higher than the maximum of the latter.",
+  "If {roll} is greater than your maximum HP, then your HP is the sum of the dice. Otherwise they increase by one.": "If {roll} is greater than your maximum HP, then your HP is the sum of the dice. Otherwise they increase by one.",
+  "Roll {formula} is {roll}. Max {attr} is {value}.": "Roll {formula} is {roll}. Max {attr} is {value}.",
+  "Increase {attr} to {result}.": "Increase {attr} to {result}.",
+  "{attr} will not increase.": "{attr} will not increase."
 }
