Feature/level up (#5)
* feat: Actions for rest

* feat: Full mouse advancement and rest

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -38,6 +38,7 @@
   "Bank": "Bank",
   "Pips": "Pips",
   "Roll:": "Roll:",
+  "Roll: ": "Roll: ",
   "About": "About",
   "This application is an independent production by Daniel Coquette and is not affiliated with Losing Games. It is published under the Mausritter Third Party Licence.": "This application is an independent production by Daniel Coquette and is not affiliated with Losing Games. It is published under the Mausritter Third Party Licence.",
   "Mausritter is copyright Losing Games.": "Mausritter is copyright Losing Games.",
@@ -48,6 +49,7 @@
   "With advantage": "With advantage",
   "With disadvantage": "With disadvantage",
   "Need {score} or lower, roll {roll}.": "Need {score} or lower, roll {roll}.",
+  "Need upper than {upper}, roll {roll}.": "Need upper than {upper}, roll {roll}.",
   "Create a new character...": "Create a new character...",
   "Load": "Load",
   "Save": "Save",
@@ -107,7 +109,7 @@
   "History": "History",
   "Manage your characters.": "Manage your characters.",
   "The sheet of “{dest}” will be overwritten by “{name}”. Do you confirm?": "The sheet of “{dest}” will be overwritten by “{name}”. Do you confirm?",
-  "The current sheet will be overwritten by “{name}”. Do you confirm?": "The current sheet will be overwritten by “{name}”. Do you confirm?",
+  "Do you want to save the sheet of “{name}”?": "Do you want to save the sheet of “{name}”?",
   "Welcome": "Welcome",
   "Hirelings": "Hirelings",
   "Recruit hireling...": "Recruit hireling...",
@@ -117,7 +119,33 @@
   "Clear": "Clear",
   "Export": "Export",
   "“{name}” is now copied to clipboard.": "“{name}” is now copied to clipboard.",
-  "Import": "Import",
+  "Import...": "Import...",
   "Paste your character here...": "Paste your character here...",
-  "Drop item here, in your bank.": "Drop item here, in your bank."
+  "Drop item here, in your bank.": "Drop item here, in your bank.",
+  "Advancement...": "Advancement...",
+  "Level up": "Level up",
+  "“{name}” prepares advancement...": "“{name}” prepares advancement...",
+  "“{name}” will move from the {current} level to the {next} level.": "“{name}” will move from the {current} level to the {next} level.",
+  "Short rest...": "Short rest...",
+  "Short rest": "Short rest",
+  "Long rest...": "Long rest...",
+  "Long rest": "Long rest",
+  "Full rest...": "Full rest...",
+  "Full rest": "Full rest",
+  "A short rest lasts 1 turn and restore d6+1 HP. Do you confirm?": "A short rest lasts 1 turn and restore d6+1 HP. Do you confirm?",
+  "A full rest is a week back in safety. It will cost you around 20 pips. Do you confirm?": "A full rest is a week back in safety. It will cost you around 20 pips. Do you confirm?",
+  "Current HP is {value}.": "Current HP is {value}.",
+  "You need to eat and sleep for a watch to do a long rest. All HP restored. Restore d6 to each attributes if HP was at max. Do you confirm?": "You need to eat and sleep for a watch to do a long rest. All HP restored. Restore d6 to each attributes if HP was at max. Do you confirm?",
+  "Restored all HP.": "Restored all HP.",
+  "Restored all atributes.": "Restored all atributes.",
+  "Restored some atributes.": "Restored some atributes.",
+  "Current STR is {value}.": "Current STR is {value}.",
+  "Current DEX is {value}.": "Current DEX is {value}.",
+  "Current WIL is {value}.": "Current WIL is {value}.",
+  "Do not forget to remove the conditions corresponding to this rest.": "Do not forget to remove the conditions corresponding to this rest.",
+  "Increase in attributes if d20 is higher than the maximum of the latter.": "Increase in attributes if d20 is higher than the maximum of the latter.",
+  "If {roll} is greater than your maximum HP, then your HP is the sum of the dice. Otherwise they increase by one.": "If {roll} is greater than your maximum HP, then your HP is the sum of the dice. Otherwise they increase by one.",
+  "Roll {formula} is {roll}. Max {attr} is {value}.": "Roll {formula} is {roll}. Max {attr} is {value}.",
+  "Increase {attr} to {result}.": "Increase {attr} to {result}.",
+  "{attr} will not increase.": "{attr} will not increase."
 }
