--- a/src/locales/fr-FR.json
+++ b/src/locales/fr-FR.json
@@ -9,6 +9,8 @@
   "Birthsign": "Signe de naissance",
   "Coat color": "Couleur du pelage",
   "Coat pattern": "Motif du pelage",
+  "Color": "Couleur",
+  "Pattern": "Motif",
   "Main paw": "Patte directrice",
   "Body": "Corps",
   "Off paw": "Patte opposée",
@@ -151,5 +153,9 @@
   "You're encumbered. You cannot run, and makes all saves with disadvantage.": "Tu es encombré, tu ne peux plus courir, et tu fais tous tes jets de sauvegarde avec un désavantage.",
   "Condolence, your mouse has passed away.": "Condoléance, ta souris est décédée.",
   "Your mouse cannot move.": "Ta souris ne peut plus bouger.",
-  "Your mouse is succumbing to madness.": "Ta souris succombe à la folie."
+  "Your mouse is succumbing to madness.": "Ta souris succombe à la folie.",
+  "Preferences...": "Préférences…",
+  "Application font": "Police de l'application",
+  "3D dices from Anton Natarov": "Dés en 3D par Anton Natarov :",
+  "Welcome, History and Hirelings background from": "Fond de l'accueil, l'historique et des employés par"
 }
