fix: Add "App" for desktop version in About

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -157,5 +157,6 @@
   "Preferences...": "Preferences...",
   "Application font": "Application font",
   "3D dices from Anton Natarov": "3D dices from Anton Natarov",
-  "Welcome, History and Hirelings background from": "Welcome, History and Hirelings background from"
+  "Welcome, History and Hirelings background from": "Welcome, History and Hirelings background from",
+  "App": "App"
 }
