--- a/src/locales/fr-FR.json
+++ b/src/locales/fr-FR.json
@@ -157,5 +157,6 @@
   "Preferences...": "Préférences…",
   "Application font": "Police de l'application",
   "3D dices from Anton Natarov": "Dés en 3D par Anton Natarov :",
-  "Welcome, History and Hirelings background from": "Fond de l'accueil, l'historique et des employés par"
+  "Welcome, History and Hirelings background from": "Fond de l'accueil, de l'historique et des employés par",
+  "App": "App"
 }
