feat: Save/load sheets in user's doc folder

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -158,5 +158,7 @@
   "Application font": "Application font",
   "3D dices from Anton Natarov": "3D dices from Anton Natarov",
   "Welcome, History and Hirelings background from": "Welcome, History and Hirelings background from",
-  "App": "App"
+  "App": "App",
+  "Mausritter Sheet folder is {folder}": "Mausritter Sheet folder is {folder}",
+  "level {n}": "level {n}"
 }
