--- a/src/locales/fr-FR.json
+++ b/src/locales/fr-FR.json
@@ -158,5 +158,7 @@
   "Application font": "Police de l'application",
   "3D dices from Anton Natarov": "Dés en 3D par Anton Natarov :",
   "Welcome, History and Hirelings background from": "Fond de l'accueil, de l'historique et des employés par",
-  "App": "App"
+  "App": "App",
+  "Mausritter Sheet folder is {folder}": "Le dossier Mausritter est {folder}",
+  "level {n}": "niveau {n}"
 }
