feat(items): Add large/tall custom objects

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -160,5 +160,8 @@
   "Welcome, History and Hirelings background from": "Welcome, History and Hirelings background from",
   "App": "App",
   "Mausritter Sheet folder is {folder}": "Mausritter Sheet folder is {folder}",
-  "level {n}": "level {n}"
+  "level {n}": "level {n}",
+  "A small custom item.": "A small custom item.",
+  "A tall custom item.": "A tall custom item.",
+  "A large custom item.": "A large custom item."
 }
