fix: smaller width needed fix: paddings and margins

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -163,5 +163,5 @@
   "level {n}": "level {n}",
   "A small custom item.": "A small custom item.",
   "A tall custom item.": "A tall custom item.",
-  "A large custom item.": "A large custom item."
+  "A wide custom item.": "A wide custom item."
 }
