--- a/src/locales/fr-FR.json
+++ b/src/locales/fr-FR.json
@@ -163,5 +163,5 @@
   "level {n}": "niveau {n}",
   "A small custom item.": "Un petit objet",
   "A tall custom item.": "Un grand objet ",
-  "A large custom item.": "Un objet large"
+  "A wide custom item.": "Un objet large"
 }
