--- a/src/locales/fr-FR.json
+++ b/src/locales/fr-FR.json
@@ -163,5 +163,6 @@
   "level {n}": "niveau {n}",
   "A small custom item.": "Un petit objet",
   "A tall custom item.": "Un grand objet ",
-  "A wide custom item.": "Un objet large"
+  "A wide custom item.": "Un objet large",
+  "If you leave before saving, your changes will be lost.": "Si vous quittez avant de sauvegarder, vos modifications seront perdues."
 }
