fix: add message at start

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -167,5 +167,6 @@
   "If you leave before saving, your changes will be lost.": "If you leave before saving, your changes will be lost.",
   "Table": "Table",
   "None": "None",
-  "Damages": "Damages"
+  "Damages": "Damages",
+  "Please create or load your mouse.": "Please create or load your mouse."
 }
