--- a/src/locales/fr-FR.json
+++ b/src/locales/fr-FR.json
@@ -167,5 +167,6 @@
   "If you leave before saving, your changes will be lost.": "Si vous quittez avant de sauvegarder, vos modifications seront perdues.",
   "Table": "Table",
   "None": "Aucun(e)",
-  "Damages": "Dégâts"
+  "Damages": "Dégâts",
+  "Please create or load your mouse.": "Créez ou chargez votre souris."
 }
