--- a/src/locales/mouse.fr-FR.json
+++ b/src/locales/mouse.fr-FR.json
@@ -15,7 +15,7 @@
   "Wise": "Sage",
   "Mysterious": "Mystérieuse",
   "Mother": "Mère",
-  "Nurturing": "Rèconfortante",
+  "Nurturing": "Réconfortante",
   "Worrying": "Inquiète",
   "Chocolate": "Chocolat",
   "Black": "Noir",
