--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -164,5 +164,9 @@
   "A small custom item.": "A small custom item.",
   "A tall custom item.": "A tall custom item.",
   "A wide custom item.": "A wide custom item.",
-  "If you leave before saving, your changes will be lost.": "If you leave before saving, your changes will be lost."
+  "If you leave before saving, your changes will be lost.": "If you leave before saving, your changes will be lost.",
+  "Table": "Table",
+  "None": "None",
+  "Damages": "Damages",
+  "Please create or load your mouse.": "Please create or load your mouse."
 }
