fix: translations for clear condition

--- a/src/locales/de-DE.json
+++ b/src/locales/de-DE.json
@@ -58,7 +58,7 @@
   "Empty": "Leer",
   "SUCCESS": "ERFOLG",
   "FAILED": "FEHLSCHLAG",
-  "Clear:": "Leeren:",
+  "Clear:": "Erholung:",
   "STR save": "STÄ-Probe",
   "DEX save": "GES-Probe",
   "WIL save": "WIL-Probe",
