--- a/src/locales/fr-FR.json
+++ b/src/locales/fr-FR.json
@@ -166,5 +166,8 @@
   "Table": "Table",
   "None": "Aucun(e)",
   "Damages": "Dégâts",
-  "Please create or load your mouse.": "Créez ou chargez votre souris."
+  "Please create or load your mouse.": "Créez ou chargez votre souris.",
+  "Rules": "Règles",
+  "{count} cards imported.": "{count} cartes importés.",
+  "Please select a JSON cards file!": "Choisissez un fichier cartes au format JSON !"
 }
