feat: save drawer wth mouse

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -3,6 +3,8 @@
   "Welcome to Mausritter Sheet!": "Welcome to Mausritter Sheet!",
   "under licence": "under license",
   "Items": "Items",
+  "Item Tall": "Item Tall",
+  "Item Wide": "Item Wide",
   "Conditions": "Conditions",
   "Birthsign": "Birthsign",
   "Coat color": "Coat color",
