--- a/src/locales/fr-FR.json
+++ b/src/locales/fr-FR.json
@@ -3,6 +3,8 @@
   "Welcome to Mausritter Sheet!": "Bienvenue sur la fiche de personnage Mausritter !",
   "under licence": "sous licence",
   "Items": "Objets",
+  "Item Tall": "Objet Haut",
+  "Item Wide": "Objet Large",
   "Conditions": "Conditions",
   "Birthsign": "Signe de naissance",
   "Coat color": "Couleur du pelage",
