feature: Add 4 pages for custom cards

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -171,5 +171,7 @@
   "Please create or load your mouse.": "Please create or load your mouse.",
   "Rules": "Rules",
   "{count} cards imported.": "{count} cards imported.",
-  "Please select a JSON cards file!": "Please select a JSON cards file!"
+  "Please select a JSON cards file!": "Please select a JSON cards file!",
+  "Add items...": "Add items...",
+  "Add conditions...": "Add conditions..."
 }
