chore: Condition Mad become Drained

--- a/src/locales/conditions.en-US.json
+++ b/src/locales/conditions.en-US.json
@@ -3,7 +3,7 @@
   "Frightened": "Frightened",
   "Hungry": "Hungry",
   "Injured": "Injured",
-  "Mad": "Mad",
+  "Drained": "Drained",
   "CONDITION-CLEAR-SR": "After short rest",
   "CONDITION-CLEAR-LR": "After long rest",
   "CONDITION-CLEAR-FR": "After full rest",
