--- a/src/locales/conditions.es-ES.json
+++ b/src/locales/conditions.es-ES.json
@@ -3,7 +3,7 @@
   "Frightened": "Asustado",
   "Hungry": "Hambriento",
   "Injured": "Herido",
-  "Mad": "Loco",
+  "Drained": "Agotado",
   "CONDITION-CLEAR-SR": "Tras descanso corto",
   "CONDITION-CLEAR-LR": "Tras descanso completo",
   "CONDITION-CLEAR-FR": "After full rest",
