--- a/src/locales/conditions.fr-FR.json
+++ b/src/locales/conditions.fr-FR.json
@@ -3,7 +3,7 @@
   "Frightened": "Effroi",
   "Hungry": "Faim",
   "Injured": "Blessure",
-  "Mad": "Folie",
+  "Drained": "Épuisé",
   "CONDITION-CLEAR-SR": "Après un repos court",
   "CONDITION-CLEAR-LR": "Après un repos long",
   "CONDITION-CLEAR-FR": "Après un repos complet",
