chore: fix typo

--- a/src/locales/conditions.de-DE.json
+++ b/src/locales/conditions.de-DE.json
@@ -3,7 +3,7 @@
   "Frightened": "Ängstlich",
   "Hungry": "Hungrig",
   "Injured": "Verletzt",
-  "Drained": "aufgelöst ",
+  "Drained": "Aufgelöst ",
   "CONDITION-CLEAR-SR": "Nach kurzer Rast",
   "CONDITION-CLEAR-LR": "Nach langer Rast",
   "CONDITION-CLEAR-FR": "Nach kompletter Rast",
