--- a/src/locales/de-DE.json
+++ b/src/locales/de-DE.json
@@ -163,7 +163,7 @@
   "A tall custom item.": "Ein hoher eigener Gegenstand.",
   "A wide custom item.": "Ein breiter eigener Gegenstand.",
   "If you leave before saving, your changes will be lost.": "Wenn du diese Seite ohne speichern verlässt, sind deine Veränderungen verloren!",
-  "Table": "Tabelle",
+  "Table": "Tish",
   "None": "Keine",
   "Damages": "Schaden",
   "Please create or load your mouse.": "Bitte erstelle oder lade deine Maus."
