--- a/src/locales/languages.json
+++ b/src/locales/languages.json
@@ -2,5 +2,6 @@
   "en-US": "English US",
   "es-ES": "Español",
   "fr-FR": "Français",
-  "de-DE": "Deutsch"
+  "de-DE": "Deutsch",
+  "ru-RU": "Русский"
 }
