--- a/src/locales/fr-FR.json
+++ b/src/locales/fr-FR.json
@@ -151,7 +151,7 @@
   "You're encumbered. You cannot run, and makes all saves with disadvantage.": "Tu es encombré, tu ne peux plus courir, et tu fais tous tes jets de sauvegarde avec un désavantage.",
   "Condolence, your mouse has passed away.": "Condoléance, ta souris est décédée.",
   "Your mouse cannot move.": "Ta souris ne peut plus bouger.",
-  "Your mouse is succumbing to madness.": "Ta souris succombe à la folie.",
+  "Your mouse is succumbing to madness.": "Ta souris succombe à l'atonie.",
   "Preferences...": "Préférences…",
   "Application font": "Police de l'application",
   "3D dices from Anton Natarov": "Dés en 3D par Anton Natarov :",
